Add Description, ManufacturerCode and Price property to CatalogueProduct and UpdateProductRequest model. Create a new migration AddProductDescriptionManCodePrice. Add new rules to UpdateProductRequestValidator.

--- a/KatlaSport.DataAccess/packages.config
+++ b/KatlaSport.DataAccess/packages.config
@@ -3,4 +3,5 @@
   <package id="Autofac" version="4.8.0" targetFramework="net47" />
   <package id="EntityFramework" version="6.2.0" targetFramework="net47" />
   <package id="StyleCop.Analyzers" version="1.0.2" targetFramework="net47" developmentDependency="true" />
+  <package id="System.ComponentModel.Primitives" version="4.3.0" targetFramework="net471" />
 </packages>
