--- a/KatlaSport.DataAccess/KatlaSport.DataAccess.csproj
+++ b/KatlaSport.DataAccess/KatlaSport.DataAccess.csproj
@@ -51,6 +51,10 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
+    <Reference Include="System.ComponentModel.Primitives">
+      <HintPath>..\packages\System.ComponentModel.Primitives.4.3.0\lib\net45\System.ComponentModel.Primitives.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -69,6 +73,10 @@
     <Compile Include="Migrations\201806141505061_AddCategoryDescription.Designer.cs">
       <DependentUpon>201806141505061_AddCategoryDescription.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201806141557400_AddProductDescriptionManCodePrice.cs" />
+    <Compile Include="Migrations\201806141557400_AddProductDescriptionManCodePrice.Designer.cs">
+      <DependentUpon>201806141557400_AddProductDescriptionManCodePrice.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -84,6 +92,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201806141505061_AddCategoryDescription.resx">
       <DependentUpon>201806141505061_AddCategoryDescription.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201806141557400_AddProductDescriptionManCodePrice.resx">
+      <DependentUpon>201806141557400_AddProductDescriptionManCodePrice.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
